--- a/stylesheet.css
+++ b/stylesheet.css
@@ -257,6 +257,33 @@ body.dark-mode {
   cursor: pointer;
 }
 
+/* Version 2 of Fullscreen Enlarge */
+#overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+#overlay img {
+  display: block;
+  margin: 50px auto;
+  max-width: 80%;
+  max-height: 80%;
+}
+
+#closeBtn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  color: white;
+  font-size: 24px;
+}
+
 /* img:hover {
   -webkit-transform: scale(3, 3);
 } */
